2002-07-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormOutlineView.m -[drawRow:] Added logic to draw inverse
	image of the outlet or action button to visually indicate which
	is being edited in the outline view.
	* GormOutlineView.h: Added typedef to indicate whether actions or
	outlets are being edited.
	* Images/GormActionSelected.tiff: Added
	* Images/GormOutletSelected.tiff: Added
	* GNUmakefile: Modified to copy images to the resources directory.
	
2002-07-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormOutlineView.[hm] : Added.   This is a NSOutlineView
	subclass handles outlets and actions for the class view.  
	As of this revision, you can view the actions and outlets of
	a class, but you can't edit them.
	* GormDocument.m: Modified to use new class.
	* GormInspectorsManager.m: Removed some code which was causing
	the application to dump core on exit.

2002-05-04  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: Added blank implementation of
	[GormClassEditor -makeSelectionVisible:(BOOL)] method.   
	When creating a new class and editing it, the application was 
	throwing an exception due to the abcense of this method.  
	It now seems to function correctly.
	
2002-04-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m
	[GormNSMenu -_createWindow]: removed NSLog statement before
	NSPanel *win declaration which was causing Gorm not to build on
	compilers gcc < 3.0.
	
2002-07-01  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* ClassInformation.plist: new outlet for NSWindowController
	* Gorm.m
	* GormWindowEditor.m
	* GormTableViewEditor.m
	* GormObjectEditor.m
	Bugfixes for proper drawing/updating of selection.

	* GormDocument.m
	Only the toplevel menu goes into the objectview panel.
	The last directory used for opening is now saved and proposed
	as the default for next time.

	* GormObjectEditor.m
	* Resources/GormViewSizeInspector.gorm